# etcd-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: CI.yml  rust.yml
examples/: README.md  auth.rs  kv.rs  kv_reauth.rs  tls.rs  watch.rs
hack/: download_etcd.sh  generate_etcd_certificate.sh  generate_etcd_cluster.sh  openssl.cnf
hack/cfssl/: ca-config.json
integration-tests/: Cargo.toml
proto/: v3election.proto
src/: client.rs  error.rs  lib.rs
src/auth/: auth_disable.rs  auth_enable.rs  auth_status.rs  mod.rs  role_add.rs  role_delete.rs  role_list.rs
src/cluster/: mod.rs
src/kv/: mod.rs  put.rs
src/lease/: mod.rs
src/lock/: mod.rs
src/watch/: mod.rs
