[package]
name = "ya-etcd-rs"
version = "1.2.1"
authors = [
    "lodrem <jialun.cai@pm.me>",
    "fiekers <fikersfan@gmail.com>",
    "diablur <diablur@gmail.com>",
]
edition = "2021"
keywords = ["etcd", "future", "async"]
repository = "https://github.com/Fiekers/etcd-rs"
homepage = "https://github.com/Fiekers/etcd-rs"
description = "etcd client for rust"
#documentation = "https://docs.rs/etcd-rs"
license = "MIT"
exclude = ["hack/", "examples/", "Makefile", "justfile"]

[lints.rust]
dead_code = "allow"

[lints.clippy]
module_inception = "allow"

[[example]]
name = "kv"
path = "examples/kv.rs"

[[example]]
name = "tls"
path = "examples/tls.rs"
required-features = ["tls"]

[[example]]
name = "watch"
path = "examples/watch.rs"

[features]
default = []
tls = ["tonic/tls", "tokio/fs"]

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = "1.40"
tokio-stream = "0.1"
futures = "0.3"
thiserror = "1.0"
http = "1.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"
